<resources>
    <string name="app_name">calculator</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="plusminus">+/-</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="div">÷</string>
    <string name="multiply">×</string>
    <string name="exponent">^</string>
    <string name="parenthesis">()</string>
    <string name="clear">C</string>
    <string name="backspace"> </string>
    <string name="currency"> </string>

    <string name="display">Enter in a value</string>
    <string name="exchangeAmount">To</string>
    <string name="convertor">Convert</string>
    <string name="currencyConverter">Currency Converter</string>

    <string-array name="spinnerItems">
        <item>AUD</item>
        <item>BGN</item>
        <item>BRL</item>
        <item>CAD</item>
        <item>CHF</item>
        <item>CNY</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>HKD</item>
        <item>HRK</item>
        <item>HUF</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>INR</item>
        <item>JPY</item>
        <item>KRW</item>
        <item>MXN</item>
        <item>MYR</item>
        <item>NOK</item>
        <item>NZD</item>
        <item>PHP</item>
        <item>PLN</item>
        <item>RON</item>
        <item>RUB</item>
        <item>SEK</item>
        <item>SGD</item>
        <item>THB</item>
        <item>TRY</item>
        <item>USD</item>
        <item>ZAR</item>

    </string-array>


</resources>